--- a/FavoriteMovies/Base.lproj/Main.storyboard
+++ b/FavoriteMovies/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="221" id="wqd-UU-lX7" customClass="MovieCell" customModule="FavoriteMovies" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="221" id="wqd-UU-lX7" customClass="MovieCell" customModule="FavoriteMovies" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="92" width="600" height="221"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wqd-UU-lX7" id="Jku-VO-0ic">
@@ -80,6 +80,12 @@
                                                 <constraint firstItem="7p4-Id-L80" firstAttribute="top" secondItem="50G-wz-al1" secondAttribute="bottom" constant="30" id="zXm-Kw-OCo"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="movieImg" destination="XE1-c0-njT" id="ToS-W0-u2o"/>
+                                            <outlet property="movieLink" destination="7p4-Id-L80" id="Dzk-ut-hzZ"/>
+                                            <outlet property="movieReview" destination="50G-wz-al1" id="IeO-uw-ZbY"/>
+                                            <outlet property="movieTitle" destination="A2O-Wc-7s2" id="SVu-vc-C5d"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
